// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalContainer should close on overlay click 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
>
  <div
    class="modal__container"
  >
    <div>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should have the correct class name by default 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
/>
`;

exports[`ModalContainer should have the correct class name when closed 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
>
  <div
    class="modal__container"
  >
    <div>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should have the correct class name when open 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  >
    <div>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should not close if \`closable\` is \`false\` 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  >
    <div>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
/>
`;

exports[`ModalContainer should render nullish component 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  />
</div>
`;

exports[`ModalContainer should render the correct component 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  >
    <div>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component on re-open 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      >
        1
      </span>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component on re-open 2`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      >
        1
      </span>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when closed 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
>
  <div
    class="modal__container"
  >
    <div>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when closed by component 1 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      >
        2
      </span>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when closed by component 2 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  />
</div>
`;

exports[`ModalContainer should render the correct component when closed by id 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      >
        1
      </span>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when forked (not closable) 1`] = `
<div>
  <div
    aria-hidden="false"
    aria-modal="true"
    class="modal modal--active"
  >
    <div
      class="modal__container"
    >
      <div>
        <h1>
          Popup Example
        </h1>
        <button>
          Close
        </button>
      </div>
    </div>
    <div
      class="modal__container"
    >
      <div>
        <span
          id="test"
        />
        <h1>
          Popup Example
        </h1>
        <button>
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when forked 1`] = `
<div>
  <div
    aria-hidden="false"
    aria-modal="true"
    class="modal modal--active"
  >
    <div
      class="modal__container"
    >
      <div>
        <h1>
          Popup Example
        </h1>
        <button>
          Close
        </button>
      </div>
    </div>
    <div
      class="modal__container"
    >
      <div>
        <span
          id="test"
        />
        <h1>
          Popup Example
        </h1>
        <button>
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when forked closed 1`] = `
<div>
  <div
    aria-hidden="false"
    aria-modal="true"
    class="modal modal--active"
  >
    <div
      class="modal__container"
    >
      <div>
        <h1>
          Popup Example
        </h1>
        <button>
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when open multiple and closed all 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      >
        2
      </span>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when open multiple and closed one 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      >
        1
      </span>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when open multiple and closed-open-closed one 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      >
        2
      </span>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when open the same window and closed 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      >
        2
      </span>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when replaced (closed) 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  class="modal"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      />
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should render the correct component when replaced (open) 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  >
    <div>
      <span
        id="test"
      />
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ModalContainer should work with same repeated modals 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="modal modal--active"
>
  <div
    class="modal__container"
  >
    <div>
      <h1>
        Popup Example
      </h1>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;
